--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ p.banner {
 	position: absolute;
 	left: 0;
 	top: 0;
-	opacity: 0.8;
+	opacity: 0.9;
 }
 
 #lightbox-navigation {
@@ -206,10 +206,16 @@ p.banner {
 	bottom: -20px;
 	width: 100px;
 	left: 49%;
+	display: none;
 }
 
 #nextPictureLink {
-	padding-left: 5px;	
+	padding-left: 10px;	
+}
+
+#closeLink {
+	position: absolute;
+	display: none;
 }
 
 #galleries {
